Revision history for MetaCPAN-Client (previously MetaCPAN-API)

2.004000    30.12.16
            * Speed up own scroller (Mickey)
            * Fixed rev_deps (Mickey)

2.004000-TRIAL 24.12.16
            * Removed dependency: Search::Elasticsearch
              in favor of an internal scroller (Mickey)
            * Added Types class for 'isa' checks (Mickey)

2.003000    19.12.16
            * Escaped query to autocomplete (Mickey)
            * Removed dependency: Try::Tiny (Mickey)

2.002000    14.12.16
            * Support 'autocomplete' endpoint (Mickey)

2.001000    08.12.16
            * Distribution: added 'rt' & 'github' methods (Mickey)
            * Use Ref::Util for ref checks (Mickey)

2.000000    18.11.16
            * Major version: v1 full support
              - removed support and default settings for v0
              - corrected domain, base_url setting, using clientinfo
              - code/tests updates and cleanup
              (Mickey, Brad Lhotsky)
            * Pinned Search::Elasticsearch version to 2.03 (Mickey)
            * Use @Starter in dist.ini + cpanfile cleanup (Grinnz)

1.028003    23.10.16
            * Removed AutoPrereqs from dist.ini (Mickey)

1.028002    23.10.16
            * GH #53 a few small dist.ini tweaks (Karen Etheridge)
            * Even more dist.ini tweaks (Mickey, thanks to Grinnz)

1.028001    22.10.16
            * GH #51 Adds eumm_version to dist.ini (Olaf Alders)
            * GH #52 Stop excluding cpanfile from being copied to
              build (Olaf Alders)

1.028000    21.10.16
            * GH #50 Remove hard-deps for HTTP::Tiny::Mech and
              WWW::Mechanize::Cached (Paul Howarth)
            * dist.ini: don't automatically update cpanfile (Mickey)

1.027000    20.10.16
            * GH #49 Convert values of JSON::PP::Boolean objects in output
              so they are not skipped when expeting scalars (Mickey)

1.026001    19.10.16